@@ -98,6 +98,9 @@ WHAT IS NEW?
       "slice to front", "Y sort children", "set sort order",
       "get sort order", "sort children", "set slice extra",
       "get slice extra" [James]
+    * "set slice visible", "get slice visible". Old command
+      "set sprite visible" still exists but is now just an alias
+      for "set slice visible" [James]
     * "number from string" [James]
     * There are now 3 NPC extra data fields (0-2) accessible with
       "set NPC extra" instead of 2 [Ralph]
